--- a/knjiga.css
+++ b/knjiga.css
@@ -308,7 +308,7 @@ footer {
   background-color: transparent;
   color: black;
   border: 1px solid #adb5bd;
-  font-family:'Times New Roman', Times, serif;
+  font-family:'Times New Roman', serif;
   font-weight: bold;
 }
 /* 
