--- a/knjiga.css
+++ b/knjiga.css
@@ -12,8 +12,8 @@ PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar)
 ---------------------------------------------------------- */
 .mimaarbid-naslovna {
   background-image: url('slike/pozadina.png'); 
-  background-size: 100% 100%; 
-  height: 46vw;
+  background-size: contain; 
+  height: 49.5vw;
   display: flex;
 }
 .navigation-bar {
