--- a/knjiga.css
+++ b/knjiga.css
@@ -12,8 +12,8 @@ PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar)
 ---------------------------------------------------------- */
 .mimaarbid-naslovna {
   background-image: url('slike/pozadina.png'); 
-  background-size: contain; 
-  height: 49.8vw;
+  background-size: cover; 
+  height: 49.2vw;
   display: flex;
 }
 .navigation-bar {
@@ -479,8 +479,8 @@ MOBILNI
 @media screen and (max-width: 600px) {
   .mimaarbid-naslovna {
     background-image: url('slike/mobilni.png'); 
-    background-size: contain; 
-    height:94.9vw;
+    background-size: containcover; 
+    height:92.1vw;
   }
   .navigation-bar {
     margin-top: 4%;
