--- a/knjiga.css
+++ b/knjiga.css
@@ -1,4 +1,3 @@
-/* OSNOVNO PODEŠAVANJE */
 * {
   box-sizing: border-box;
 }
@@ -6,14 +5,14 @@ body {
   margin:0;
 }
 /* 
-PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar) 
----------------------------------------------------------- */
+PRVA SEKCIJA: Početna
+------------------------------------------------------------ */
 .mimaarbid-naslovna {
   background-image: url('slike/pozadina.png');
   background-size: cover;
   height: 49.2vw;
   display: flex;
-  }
+}
 .navigation-bar {
   display: flex;
   justify-content: flex-end;
@@ -30,8 +29,8 @@ PRVA SEKCIJA: [ Početna ] (Glavna slika, Navigation-Bar)
   letter-spacing: 2.4px;
 }
 /* 
-DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-text) 
----------------------------------------------------------------------------------- */
+DRUGA SEKCIJA: Biografija
+------------------------------------------------------------ */
 .biografija {
   height: 32.6vw;
   background-color: #F7F3D6;
@@ -92,8 +91,8 @@ DRUGA SEKCIJA: [ Biografija ] (Zatamnjena slika Mime sa šeširom, Biografija-te
   font-family: "Wingdings 2";
 }
 /* 
-TREĆA SEKCIJA: [ Umetnički-Blok ] (Dve slike: slikarske četkice i palme) 
----------------------------------------------------------------------- */
+TREĆA SEKCIJA: Umetnički blok
+------------------------------------------------------------ */
 .umetnički-blok {
   display: flex;
   margin-top: -1%;
@@ -109,41 +108,39 @@ TREĆA SEKCIJA: [ Umetnički-Blok ] (Dve slike: slikarske četkice i palme)
   height: auto;
   margin-top: 50px;
 }
-
 #slika-četkice {
   position: relative;
   width: 23%;
   height: auto;
-  margin-bottom: -1%;
 }
 /*
-ČETVRTA SEKCIJA: [ Umetnički-Blok 2 ] (2 slike: palme) 
--------------------------------------------------------*/
+ČETVRTA SEKCIJA: Umetnički-Blok 2  
+------------------------------------------------------------ */
 .umetnički-blok2 {
   display:flex;
-  justify-content: center;
+
   background-color: #f2f2f2;
-}
-.slika-palme2 {
-  margin-top: 50px;
-  position: relative;
-  left: 8%;
-}
-.slika-palme3 {
-  margin-top: 50px;
-  position: relative;
-  left: 10%;
 
 }
+.slika-palme2 {
+  flex:1.19;
+  margin-top: 60px;
+  margin-left: 10%;
+ }
+.slika-palme3 {
+  flex:2;
+}
 .slika-palme2 img {
-  width: 90.5%;
+  width: 85%;
   height: auto;
 }
 .slika-palme3 img {
-  width: 76%;
+  width: 85%;
   height: auto;
 }
-/* ASIDE (Manji text u vezi slike-planina) */
+/* 
+ASIDE: Slika-text 
+------------------------------------------------------------ */
 .umetnički-blok2-text {
   background-color: #f2f2f2;
   padding-bottom: 60px;
@@ -159,7 +156,7 @@ TREĆA SEKCIJA: [ Umetnički-Blok ] (Dve slike: slikarske četkice i palme)
   font-style: italic;
 }
 /* 
-PETA SEKCIJA: [ Umetnički-Blok 3 ] (Slika: planine i reka) 
+PETA SEKCIJA: Umetnički-Blok 3 
 ------------------------------------------------------------*/
 .slika-planina {
   background-color: #3d6877;
@@ -178,7 +175,7 @@ PETA SEKCIJA: [ Umetnički-Blok 3 ] (Slika: planine i reka)
   font-size: 1.6vw;
 }
 /* 
-ŠESTA SEKCIJA: [ Knjige ] 
+ŠESTA SEKCIJA: Knjige  
 -------------------------------*/
 .knjige {
   background-color: #f2f2f2;
@@ -186,9 +183,8 @@ PETA SEKCIJA: [ Umetnički-Blok 3 ] (Slika: planine i reka)
   font-size: 1.9vw;
   margin-top: -15px;
 }
-
 /* 
-SEDMA SEKCIJA: [ Mima-lično ] 
+SEDMA SEKCIJA: Mima-lično 
 -------------------------------*/
 .mima-lično {
   float: left;
@@ -305,7 +301,8 @@ footer {
 
 /* RESPONSIVE 
 ----------------------------------------------------------------------------- */
-/* Prelazak sa Flex-Fow na Flex-Column u drugoj sekciji (max-width 1023) */
+
+/* Prelazak sa Flex-Row na Flex-Column u drugoj sekciji (max-width 1023px) */
 @media screen and (max-width: 1023px) {
 
   /* PRVA SEKCIJA: (Početna) */
@@ -315,7 +312,7 @@ footer {
     .navigation-bar li a {
     font-size: 1.3vw;
   }
- /* DRUGA SEKCIJA: [ Biografija ] */
+ /* DRUGA SEKCIJA: Biografija */
   .biografija {
     position: relative;
     flex-direction: column-reverse;
@@ -359,7 +356,7 @@ footer {
     text-align: center;
     font-family: "Wingdings 2";
   }
-  /* ŠETA SEKCIJA */
+  /* SEDMA SEKCIJA: Mima-lično  */
   .mima-text {
     margin-top: 3%;
     left: 28%;
@@ -386,28 +383,27 @@ footer {
   #vrh-strane a {
    font-size: 1.1em;
   }
-  
 }
-/* Laptop Large (min-width: 1024px) */
+/* Laptop  (min-width: 1024px) */
 @media screen and (min-width: 1024px) {
   
-  /* PRVA SEKCIJA: [ Početna ] */
-    .navigation-bar {
-      margin-left: 55%;
-      margin-top: 4.6%;
-    }
-    .navigation-bar li a {
-      padding: 0 20px;
-    }
-    /* FOOTER */
+  /* PRVA SEKCIJA: Početna */
+  .navigation-bar {
+    margin-left: 55%;
+    margin-top: 4.6%;
+  }
+  .navigation-bar li a {
+    padding: 0 20px;
+  }
+  /* FOOTER */
   #vrh-strane a {
     font-size: 1.5vw;
-   }
-  } 
+  }
+} 
 /* Laptop Large (min-width: 1200px) */
 @media screen and (min-width: 1200px) {
   
-/* PRVA SEKCIJA: [ Početna ] */
+/* PRVA SEKCIJA: Početna */
   .navigation-bar {
     margin-left: 58%;
     margin-top: 4.6%;
@@ -421,11 +417,10 @@ footer {
     top: -52px;
   }
 } 
-
 /* Laptop Extra Large (min-width 1400px) */
 @media screen and (min-width: 1400px) {
 
-/* PRVA SEKCIJA: (Početna) */
+  /* PRVA SEKCIJA: Početna */
   .navigation-bar {
     margin-left: 60%;
   }
@@ -433,11 +428,10 @@ footer {
     padding: 0 22px;
   }
 }
- 
-/* Very Large Screen (min-width: 1900px) */
+/* Large Screen (min-width: 1900px) */
 @media screen and (min-width: 1900px) {
   
-  /* PRVA SEKCIJA: (Početna) */
+  /* PRVA SEKCIJA: Početna */
   .navigation-bar {
     margin-left: 61%;
   }
@@ -455,7 +449,8 @@ footer {
 }
 /* iPad Air & iPad Mini (min-width: 768px) and (max-width: 900px) */
 @media screen and (min-width: 768px) and (max-width: 900px) {
-  /* PRVA SEKCIJA: (Početna) */
+
+  /* PRVA SEKCIJA: Početna */
   .navigation-bar {
     margin-top: 3.8%;
     margin-left: 53%;
@@ -463,89 +458,87 @@ footer {
   .navigation-bar li a {
     padding: 0 12px;
     font-size: 1.4vw;
-    }
-  /* DRUGA SEKCIJA: [ Biografija ] */
+  }
+  /* DRUGA SEKCIJA: Biografija */
   .biografija-text pre{
     font-size: 2.3vw;
     line-height: 2.7vw;
     top: -33%;
   }
-/* TREĆA SEKCIJA: [ Umetnički-Blok ] */
-
 }
+/* Prelazak sa Flex-Row na Flex-Column u sedmoj sekciji (max-width 900px) */
 @media screen and (max-width: 900px) {
-/* SEDMA SEKCIJA: [ Mima-lično ] */
-.mima-lično {
-  position: relative;
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: flex-start;
-}
-.mima-text {
-  margin-top: 3.2%;
-  position: relative;
-  left: 0%;
-  color: #3d6877;
-  line-height: 126%;
-} 
-#mima-potpis {
-  position: absolute;
-  font-size: 7.8vw;
-  text-align: center;
-  margin-top: 123px;
-  left:69%;
-}
-.mima-text pre {
-  position: absolute;
-  left: 5%;
-  margin-top: 0;
-  font-size: 2.4vw;
-  color: #3d6877;
-  line-height: 120%;
-  text-align: left;
-}
-.mima-lično img {
-  width: 40%;
-  height: auto;
-  margin-left: 5%;
-  margin-top: 0%;
-}
-.mima-lično img:last-of-type {
-  position: relative;
-  left: 44%;
-  top: 170px;
-  width: 43%;
-}
- /* FOOTER */
- footer {
-  top: 50px;
-  align-items: center;
-  height: 16vw;
-}
-#mimaarbid-text {
-  bottom: -3.2%;
-  font-size: 3em;
-}
-#pismo-simbol {
-  font-size: 5em;
-  top: -6%;
-}
-.kontakt-imejl {
- margin-left: -8%;
- font-size: 2.7vw;
- margin-bottom: 0%;
-}
-.kontakt-imejl p:first-of-type {
-  margin-left: 3px;
-  margin-bottom: -6%;
-}
-#facebook {
-  font-size: 2.7em;
-}
 
-
+  /* SEDMA SEKCIJA: Mima-lično */
+  .mima-lično {
+    position: relative;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+  }
+  .mima-text {
+    margin-top: 3.2%;
+    position: relative;
+    left: 0%;
+    color: #3d6877;
+    line-height: 126%;
+  } 
+  #mima-potpis {
+    position: absolute;
+    font-size: 7.8vw;
+    text-align: center;
+    margin-top: 123px;
+    left:69%;
+  }
+  .mima-text pre {
+    position: absolute;
+    left: 5%;
+    margin-top: 0;
+    font-size: 2.4vw;
+    color: #3d6877;
+    line-height: 120%;
+    text-align: left;
+  }
+  .mima-lično img {
+    width: 40%;
+    height: auto;
+    margin-left: 5%;
+    margin-top: 0%;
+  }
+  .mima-lično img:last-of-type {
+    position: relative;
+    left: 44%;
+    top: 170px;
+    width: 43%;
+  }
+  /* FOOTER */
+  footer {
+    top: 50px;
+    align-items: center;
+    height: 16vw;
+  }
+  #mimaarbid-text {
+    bottom: -3.2%;
+    font-size: 3em;
+  }
+  #pismo-simbol {
+    font-size: 5em;
+    top: -6%;
+  }
+  .kontakt-imejl {
+     margin-left: -8%;
+     font-size: 2.7vw;
+     margin-bottom: 0%;
+  }
+  .kontakt-imejl p:first-of-type {
+    margin-left: 3px;
+    margin-bottom: -6%;
+  }
+  #facebook {
+    font-size: 2.7em;
+  }
 }
-
+/* VEĆI MOBILNI (max-width: 767px) */
 @media screen and (max-width: 767px) {
   /* PRVA SEKCIJA */
   .mimaarbid-naslovna {
@@ -604,9 +597,7 @@ footer {
   }
 }
 
-/* MOBILNI */
-
-/* ČETVRTA SEKCIJA: [ Umetnički-Blok 2 ] */ 
+/* SREDNJI MOBILNI (min-width: 500px) and (max-width: 650px) */
 @media screen and (min-width: 500px) and (max-width: 650px) {
   .biografija-text pre{
     top: -35%;
@@ -614,6 +605,7 @@ footer {
     line-height: 3.1vw;
   }
 }
+/*MANJI MOBILNI (max-width: 400px) */
 @media screen and (max-width: 400px) {
   .biografija-text pre{
     top: -35%;
