--- a/knjiga.css
+++ b/knjiga.css
@@ -53,7 +53,7 @@ DRUGA SEKCIJA: Biografija
   background-size: 112% 100%;
   background-position: 40% 0;
 }
-.biografija-text pre {
+*.biografija-text pre {
   width: 100%;
   margin-left: 2%;
   margin-top: 6.4%;
@@ -62,11 +62,11 @@ DRUGA SEKCIJA: Biografija
   font-family: "Marion", serif;
   color: black;
 }
-.biografija-text pre a {
+.biografija-text a {
   color: black;
   text-decoration: none;
 }
-.biografija-text pre a:hover {
+.biografija-text a:hover {
   color: #222059;
   text-decoration: underline;
 }
@@ -88,15 +88,22 @@ DRUGA SEKCIJA: Biografija
   position: absolute;
   margin-top: -3.4%;
   font-size: 1.9vw;
-  margin-left: enter;
   margin-left: 30.8%;
   text-align: center;
   font-family: "Wingdings 2";
+}
+.mobilni {
+  font-size: 2.6vw;
+  line-height: 3.1vw;
+  font-family: "Marion",serif;
+  padding: 50px 70px 20px;
+  margin-left: 0;
 }
 /* 
 TREĆA SEKCIJA: Umetnički blok
 ------------------------------------------------------------ */
 .umetnički-blok {
+  font-size: 1.62vw;
   display: flex;
   margin-top: 50px;
   justify-content: flex-start;
@@ -119,6 +126,7 @@ TREĆA SEKCIJA: Umetnički blok
 ČETVRTA SEKCIJA: Umetnički-Blok 2  
 ------------------------------------------------------------ */
 .umetnički-blok2 {
+  font-size: 1.62vw;
   display:flex;
   background-color: #f2f2f2;
 }
@@ -144,15 +152,17 @@ ASIDE: Slika-text
 .slika-text {
   background-color: #f2f2f2;
   padding-bottom: 60px;
-  margin-left: 0;
   text-align: center;
   font-size: 1.7vw;
 }
-.slika-text pre {
+.slika-text p {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "Marion";
   color: #3d6877;
   margin-top: 0px;
-  padding-top: 50px;
+  padding-top: 35px;
   font-style: italic;
 }
 /* 
@@ -160,7 +170,7 @@ PETA SEKCIJA: Umetnički-Blok 3
 ------------------------------------------------------------*/
 .slika-planina {
   background-color: #3d6877;
-  margin-top: -70px;
+  margin-top: -45px;
   color: white;
   padding-bottom: 20px;
 }
@@ -173,7 +183,7 @@ PETA SEKCIJA: Umetnički-Blok 3
 .slika-planina p {
   margin-left: 7.8%;
   padding-bottom: 2%;
-  font-size: 1.6vw;
+  font-size: 1.62vw;
 }
 /* 
 ŠESTA SEKCIJA: Knjige  
@@ -470,6 +480,14 @@ footer {
 /* Prelazak sa Flex-Row na Flex-Column u sedmoj sekciji (max-width 900px) */
 
 @media screen and (max-width: 900px) {
+  /* TREĆA SEKCIJA, ČETVRTA SEKCIJA, PETA SEKCIJA */
+  .umetnički-blok, .umetnički-blok2, .slika-planina p {
+    font-size: 0.95em;
+  }
+  /* ASIDE: Slika-text */
+  .slika-text {
+    font-size: 1.1em;
+  }
   /* SEDMA SEKCIJA: Mima-lično */
   .mima-lično {
     position: relative;
@@ -558,27 +576,22 @@ footer {
     padding: 0 17px;
     letter-spacing: 2.3px;
   }
-  /*DRUGA SEKCIJA Biografija*/
+  /* DRUGA SEKCIJA: Biografija */
   .biografija {
     height: 130vw
   }
-  .biografija-text pre{
-    width: 94%;
-    top: -35%;
-    font-size: 2.6vw;
-    line-height: 2.8vw;
-  }
   .biografija img {
+    position: relative;
     width: 98%;
-    top: -10%;
+    top: -20%;
     margin-left: 0%;
-    margin-bottom: -13%;
+    margin-bottom: -15%;
   }
-  /* TREĆA SEKCIJA*/
+  /* TREĆA SEKCIJA: Umetnički-Blok*/
   .slika-palme {
     text-align: center;
     margin-left: 0;
-    margin-top: -2px;
+    margin-top: -3px;
   }
   .slika-palme img {
     height: auto;
@@ -587,7 +600,6 @@ footer {
   }
   #slika-četkice {
     position: relative;
-    top: 5px;
     width: 35%;
     height: auto;
   }
@@ -615,33 +627,68 @@ footer {
     background-color: transparent;
   }
 }
-/* SREDNJI MOBILNI (min-width: 500px) and (max-width: 650px) */
+/* SREDNJI MOBILNI (max-width: 650px) */
 
-@media screen and (min-width: 500px) and (max-width: 650px) {
-  /*DRUGA SEKCIJA Biografija*/
-  .biografija-text pre{
-    top: -35%;
-    font-size: 2.9vw;
-    line-height: 3.1vw;
+@media screen and (max-width: 671px) {
+  
+  /* DRUGA SEKCIJA: Biografija */
+  .biografija img {
+    top: -5%;
+    margin-bottom: -8%;
   }
-  /* ČETVRTA SEKCIJA: Umetnički-Blok 2 */ 
-  .umetnički-blok2 {
-    font-size: 0.8em;
+  .mobilni {
+    font-size: 3vw;
+    line-height: 3.4vw;
+    padding: 40px 50px 0;
+  }
+  /* ASIDE: Slika-text */
+  .slika-text {
+    width: 100%;
+    font-size: 1em;
+  }
+}
+@media screen and (max-width: 575px) {
+  
+  /* DRUGA SEKCIJA: Biografija */
+  .biografija img {
+    top: -5%;
+    margin-bottom: -15%;
+  }
+  .mobilni {
+    font-size: 3.3vw;
+    line-height: 3.7vw;
+    padding: 40px 40px 0;
+  }
+
+}
+@media screen and (max-width: 475px) {
+  
+  /* DRUGA SEKCIJA: Biografija */
+  .biografija img {
+    top: -5%;
+    margin-bottom: -25%;
+  }
+  .mobilni {
+    font-size: 3.8vw;
+    line-height: 4.1vw;
+    padding: 40px 30px 0;
   }
 }
 /*MANJI MOBILNI (max-width: 400px) */
 
 @media screen and (max-width: 400px) {
-  /*DRUGA SEKCIJA Biografija*/
-  .biografija-text pre{
-    top: -35%;
-    font-size: 3.5vw;
-    line-height: 3.3vw;
+  /* TREĆA SEKCIJA, ČETVRTA SEKCIJA, PETA SEKCIJA */
+  .umetnički-blok, .umetnički-blok2, .slika-planina p {
+    font-size: 0.9em;
   }
   /* ČETVRTA SEKCIJA: Umetnički-Blok 2 */ 
   .umetnički-blok2 {
     font-size: 0.8em;
   }
+  /* ASIDE: Slika-text */
+  /*.slika-text {
+    font-size: 0.7em;
+  } */
 }
 
 
